--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-	<link rel="stylesheet" href="assets/css/styles.css">
+	  <link rel="stylesheet" href="assets/css/styles.css">
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <meta name="viewport" content="initial-scale=1" />
   </head>
   <body layout="column" ng-app="theApp">
@@ -24,6 +25,9 @@
     <script src="app/shared/app.js"></script>
     <script src="app/components/home/homeCtrl.js"></script>
     <script src="app/components/dashboard/dashboardCtrl.js"></script>
+
+    <!-- Directives -->
+    <script src="app/components/dashboard/dashboardDirectives.js"></script>
 
   </body>
 </html>
