--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="app/shared/app.js"></script>
     <script src="app/components/home/homeCtrl.js"></script>
     <script src="app/components/dashboard/dashboardCtrl.js"></script>
+    <script src="app/components/profile/profileCtrl.js"></script>
 
     <!-- Directives -->
     <script src="app/components/dashboard/dashboardDirectives.js"></script>
